--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ packages/
 ProyectoCalculadora/bin/
 
 ProyectoCalculadora/obj/
+
+UnitTests-ProyectoCalculadora/obj/Debug/
+
+UnitTests-ProyectoCalculadora/bin/Debug/
+
+\.vs/ProyectoCalculadora/v14/\.suo
+
+*.cache
